tests/testcases/errors/BCE0082-1.boo
"""
BCE0082-1.boo(6,20): BCE0082: 'System.String' is not callable. Event type must be callable.
"""
class Button:

	event Click as string
